# SMA_TP3

./: README.md  agentic_ai_with_langchain_V3.ipynb  main.py  pyproject.toml
