[project]
name = "sma-langchain1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "langgraph-checkpoint>=4.0.1",
    "python-dotenv>=1.2.2",
]
